# homepage-rs

./: Cargo.toml  README.md  Trunk.toml  index.html
src/: footer.rs  main.rs  pages.rs  random.rs  routes.rs
src/pages/: about.rs  mod.rs  status_code.rs  turbofish.rs
static/: turbofish.css
templates/: about.html  index.html
