[package]
authors = ["Jonas Platte <jplatte+git@posteo.de>", "romner-set"]
license = "AGPL-3.0+"
name = "turbofish"
repository = "https://github.com/romner-set/turbo.fish"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.12", default-features = false, features = ["http1", "http2", "tokio"] }
futures-util = { version = "0.3.28", default-features = false }
itertools = { version = "0.10.5", default-features = false }
minijinja = "0.31.0"
rand = "0.8.5"
serde = "1.0.159"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "signal"] }
tower-http = { version = "0.3.5", features = ["fs"] }
