[package]
authors = ["Jonas Platte <jplatte+git@posteo.de>", "romner-set"]
license = "AGPL-3.0+"
name = "turbofish"
repository = "https://github.com/romner-set/turbo.fish"
version = "1.0.0"
edition = "2021"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
urlencoding = "2.1.2"
